# APF-Paper-1-The-Enforceability-of-Distinction

./: .gitignore  APF_Reviewer_Walkthrough.ipynb  Brooke_EnforceabilityOfDistinction (2).tex  Brooke_EnforceabilityOfDistinction_v4.tex  Brooke_EnforceabilityOfDistinction_v5.tex  LICENSE  README.md  REVIEWERS_GUIDE.md  core.py  index.html  pyproject.toml  run_checks.py  zenodo.json
apf/: __init__.py  bank.py  core.py
docs/: index.html
