[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "apf-paper1"
version = "1.0.0"
description = "Admissibility Physics Framework — Paper 1: The Structural Skeleton of Quantum Mechanics from Finite Enforcement Capacity"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []  # stdlib only — zero external dependencies

[project.scripts]
apf-check = "apf.bank:run_all"

[tool.setuptools.packages.find]
include = ["apf*"]
